--- a/wiphoto/index.html
+++ b/wiphoto/index.html
@@ -1,22 +1,22 @@
 <html><head>
 <TITLE> Web iPhoto</TITLE>
-<SCRIPT type="text/javascript" src="js/functions.js"></SCRIPT>
-<SCRIPT type="text/javascript" src="js/template.js"></SCRIPT>
-<SCRIPT type="text/javascript" src="js/albums.js"></SCRIPT>
-<SCRIPT type="text/javascript" src="js/photos.js"></SCRIPT>
-<LINK   rel="stylesheet" type="text/css" href="css/iphoto.css" />
+<SCRIPT type="text/javascript" src="wiphoto/js/functions.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="wiphoto/js/template.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="wiphoto/js/albums.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="wiphoto/js/photos.js"></SCRIPT>
+<LINK   rel="stylesheet" type="text/css" href="wiphoto/css/iphoto.css" />
 </head><body onLoad="populateAlbums();">
 <div id="navigation">
-	<div id="albumdata"></div>
+	<div class="header" id="album_navigation">ALBUMS<div id="albumdata"></div></div>
 </div>
 <div id="viewPanel"></div>
 <div id="toolpanel">
 	<div class="tools" id="play">
-		<a href="javascript:play();">&nbsp;&nbsp;<img src="images/play-N.png" border=0><br>Slideshow</a>
+		<a href="javascript:play();">&nbsp;&nbsp;<img src="wiphoto/images/play-N.png" border=0><br>Slideshow</a>
 	</div>
 	<div class="tools" id="prevnext">
-		<a href="javascript:prev()"><img style="border-right: 1px solid #aaa" src="images/prev-N.png"></a><a 
-		   href="javascript:next()"><img src="images/next-N.png"></a>
+		<a href="javascript:prev()"><img style="border-right: 1px solid #aaa" src="wiphoto/images/prev-N.png"></a><a 
+		   href="javascript:next()"><img src="wiphoto/images/next-N.png"></a>
 	</div>
 </div>
 </body></html>
