--- a/wiphoto/index.html
+++ b/wiphoto/index.html
@@ -5,7 +5,7 @@
 <SCRIPT type="text/javascript" src="wiphoto/js/albums.js"></SCRIPT>
 <SCRIPT type="text/javascript" src="wiphoto/js/photos.js"></SCRIPT>
 <LINK   rel="stylesheet" type="text/css" href="wiphoto/css/iphoto.css" />
-</head><body onLoad="populateAlbums();">
+</head><body onLoad="init();">
 <div id="navigation">
 	<div class="header" id="album_navigation">ALBUMS<div id="albumdata"></div></div>
 </div>
