Keyboard navigation in thummb mode : moving selection

--- a/wiphoto/index.html
+++ b/wiphoto/index.html
@@ -1,6 +1,7 @@
 <html><head>
 <TITLE> Web iPhoto</TITLE>
 <SCRIPT type="text/javascript" src="wiphoto/js/functions.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="wiphoto/js/prototype.js"></SCRIPT>
 <SCRIPT type="text/javascript" src="wiphoto/js/template.js"></SCRIPT>
 <SCRIPT type="text/javascript" src="wiphoto/js/albums.js"></SCRIPT>
 <SCRIPT type="text/javascript" src="wiphoto/js/photos.js"></SCRIPT>
