--- a/wiphoto/index.html
+++ b/wiphoto/index.html
@@ -5,7 +5,9 @@
 <SCRIPT type="text/javascript" src="wiphoto/js/template.js"></SCRIPT>
 <SCRIPT type="text/javascript" src="wiphoto/js/albums.js"></SCRIPT>
 <SCRIPT type="text/javascript" src="wiphoto/js/photos.js"></SCRIPT>
-<LINK   rel="stylesheet" type="text/css" href="wiphoto/css/iphoto.css" />
+<SCRIPT type="text/javascript" src="wiphoto/js/slides.js"></SCRIPT> 
+
+<LINK   rel="stylesheet" type="text/css" href="wiphoto/css/iphoto.css" media="screen" />
 </head><body onLoad="init();">
 <div id="navigation">
 	<div class="header" id="album_navigation">ALBUMS<div id="albumdata"></div></div>
@@ -13,7 +15,7 @@
 <div id="viewPanel"></div>
 <div id="toolpanel">
 	<div class="tools" id="play">
-		<a href="javascript:play();">&nbsp;&nbsp;<img src="wiphoto/images/play-N.png" border=0><br>Slideshow</a>
+		<a href="javascript:play(1289);">&nbsp;&nbsp;<img src="wiphoto/images/play-N.png" border=0><br>Slideshow</a>
 	</div>
 	<div class="tools" id="prevnext">
 		<a href="javascript:showPhoto(prev())"><img style="border-right: 1px solid #aaa" src="wiphoto/images/prev-N.png"></a><a 
