--- a/wiphoto/index.html
+++ b/wiphoto/index.html
@@ -1,4 +1,4 @@
-<html><head>
+<HTML><HEAD>
 <TITLE> Web iPhoto</TITLE>
 <SCRIPT type="text/javascript" src="wiphoto/js/functions.js"></SCRIPT>
 <SCRIPT type="text/javascript" src="wiphoto/js/prototype.js"></SCRIPT>
@@ -8,18 +8,17 @@
 <SCRIPT type="text/javascript" src="wiphoto/js/slides.js"></SCRIPT> 
 
 <LINK   rel="stylesheet" type="text/css" href="wiphoto/css/iphoto.css" media="screen" />
-</head><body onLoad="init();">
-<div id="navigation">
-	<div class="header" id="album_navigation">ALBUMS<div id="albumdata"></div></div>
-</div>
-<div id="viewPanel"></div>
-<div id="toolpanel">
-	<div class="tools" id="play">
-		<a href="javascript:play(1289);">&nbsp;&nbsp;<img src="wiphoto/images/play-N.png" border=0><br>Slideshow</a>
-	</div>
-	<div class="tools" id="prevnext">
-		<a href="javascript:showPhoto(prev())"><img style="border-right: 1px solid #aaa" src="wiphoto/images/prev-N.png"></a><a 
-		   href="javascript:showPhoto(next())"><img src="wiphoto/images/next-N.png"></a>
-	</div>
-</div>
-</body></html>
+</HEAD><BODY onLoad="init();">
+<DIV ID="navigation">
+   <DIV CLASS="header" ID="album_navigation">ALBUMS<div id="albumdata"></div></div>
+</DIV>
+<DIV ID="viewPanel"></DIV>
+<DIV ID="toolpanel">
+  <DIV CLASS="tools" ID="play">
+    <A HREF="javascript:show.play();">&nbsp;&nbsp;<img src="wiphoto/images/play-N.png" border=0><br>Slideshow</A>
+  </DIV>
+  <DIV CLASS="tools" ID="prevnext">
+    <A HREF="javascript:showPhoto(prev())"><img style="border-right: 1px solid #aaa" src="wiphoto/images/prev-N.png"></a><a 
+href="javascript:showPhoto(next())"><img src="wiphoto/images/next-N.png"></a>
+</DIV></DIV>
+</BODY></HTML>
