--- a/wiphoto/index.html
+++ b/wiphoto/index.html
@@ -18,7 +18,7 @@
     <A HREF="javascript:show.play();">&nbsp;&nbsp;<img src="wiphoto/images/play-N.png" border=0><br>Slideshow</A>
   </DIV>
   <DIV CLASS="tools" ID="prevnext">
-    <A HREF="javascript:showPhoto(prev())"><img style="border-right: 1px solid #aaa" src="wiphoto/images/prev-N.png"></a><a 
-href="javascript:showPhoto(next())"><img src="wiphoto/images/next-N.png"></a>
+    <A HREF="javascript:photo.show(false,photo.prev())"><img style="border-right: 1px solid #aaa" src="wiphoto/images/prev-N.png"></a><a 
+href="javascript:photo.show(false,photo.next())"><img src="wiphoto/images/next-N.png"></a>
 </DIV></DIV>
 </BODY></HTML>
