Keyboard navigation for albumThumb mode. CSS cleanup. rename functions.js to wiphoto.js. TODO as separate file

--- a/wiphoto/index.html
+++ b/wiphoto/index.html
@@ -1,11 +1,10 @@
 <HTML><HEAD>
 <TITLE> Web iPhoto</TITLE>
-<SCRIPT type="text/javascript" src="wiphoto/js/functions.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="wiphoto/js/wiphoto.js"></SCRIPT>
 <SCRIPT type="text/javascript" src="wiphoto/js/prototype.js"></SCRIPT>
 <SCRIPT type="text/javascript" src="wiphoto/js/template.js"></SCRIPT>
 <SCRIPT type="text/javascript" src="wiphoto/js/albums.js"></SCRIPT>
 <SCRIPT type="text/javascript" src="wiphoto/js/photos.js"></SCRIPT>
-<SCRIPT type="text/javascript" src="wiphoto/js/slides.js"></SCRIPT> 
 
 <LINK   rel="stylesheet" type="text/css" href="wiphoto/css/iphoto.css" media="screen" />
 </HEAD><BODY onLoad="init();">
