album hierarchical menu close, open

--- a/wiphoto/index.html
+++ b/wiphoto/index.html
@@ -9,7 +9,7 @@
 <LINK   rel="stylesheet" type="text/css" href="wiphoto/css/iphoto.css" media="screen" />
 </HEAD><BODY onLoad="init();">
 <DIV ID="navigation">
-   <DIV CLASS="header" ID="album_navigation">ALBUMS<div id="albumdata"></div></div>
+   <DIV CLASS="header" ID="album_navigation">ALBUMS<div id="albumMenu"></div></div>
 </DIV>
 <DIV ID="viewPanel"></DIV>
 <DIV ID="toolpanel">
