--- a/wiphoto/index.html
+++ b/wiphoto/index.html
@@ -1,12 +1,12 @@
 <HTML><HEAD>
 <TITLE> Web iPhoto</TITLE>
-<SCRIPT type="text/javascript" src="wiphoto/js/wiphoto.js"></SCRIPT>
-<SCRIPT type="text/javascript" src="wiphoto/js/prototype.js"></SCRIPT>
-<SCRIPT type="text/javascript" src="wiphoto/js/template.js"></SCRIPT>
-<SCRIPT type="text/javascript" src="wiphoto/js/albums.js"></SCRIPT>
-<SCRIPT type="text/javascript" src="wiphoto/js/photos.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="js/wiphoto.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="js/prototype.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="js/template.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="js/albums.js"></SCRIPT>
+<SCRIPT type="text/javascript" src="js/photos.js"></SCRIPT>
 
-<LINK   rel="stylesheet" type="text/css" href="wiphoto/css/iphoto.css" media="screen" />
+<LINK   rel="stylesheet" type="text/css" href="css/iphoto.css" media="screen" />
 </HEAD><BODY onLoad="init();">
 <DIV ID="navigation">
    <DIV CLASS="header" ID="album_navigation">ALBUMS<div id="albumMenu"></div></div>
@@ -14,10 +14,10 @@
 <DIV ID="viewPanel"></DIV>
 <DIV ID="toolpanel">
   <DIV CLASS="tools" ID="play">
-    <A HREF="javascript:play();">&nbsp;&nbsp;<img src="wiphoto/images/play-N.png" border=0><br>Slideshow</A>
+    <A HREF="javascript:play();">&nbsp;&nbsp;<img src="images/play-N.png" border=0><br>Slideshow</A>
   </DIV>
   <DIV CLASS="tools" ID="prevnext">
-    <A HREF="javascript:show(false,prev())"><img style="border-right: 1px solid #aaa" src="wiphoto/images/prev-N.png"></a><a 
-href="javascript:show(false,next())"><img src="wiphoto/images/next-N.png"></a>
+    <A HREF="javascript:show(false,prev())"><img style="border-right: 1px solid #aaa" src="images/prev-N.png"></a><a 
+href="javascript:show(false,next())"><img src="images/next-N.png"></a>
 </DIV></DIV>
 </BODY></HTML>
